--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-1.34MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇨🇳 中国-15.85MB/s(Youtube:不良林), server: bs2-2.getnjnd.com, port: 6500, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇺🇸 美国-7.07MB/s(Youtube:不良林), server: 20.239.15.148, port: 13405, type: trojan, password: 8167c2ee-a819-4bfc-ba74-1e4c565ce568, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-9.94MB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 4501, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇨🇳 中国-532.7KB/s(Youtube:不良林), server: bs1-1.getnjnd.com, port: 3506, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇭🇰 香港-569.4KB/s(Youtube:不良林), server: cmhk1.linhun11.xyz, port: 28000, type: trojan, password: 2cee2f05-9351-4a6d-9f80-ff859a54a0b3, sni: cmhk1.linhun11.xyz, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-306.3KB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20715, type: trojan, password: 5abd9b83-295e-35e4-b0b3-deed61eea35f, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-719.0KB/s(Youtube:不良林), server: 20.239.15.148, port: 11406, type: trojan, password: 8167c2ee-a819-4bfc-ba74-1e4c565ce568, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.93MB/s(Youtube:不良林), server: 142.4.101.137, port: 20561, type: vmess, uuid: cf3eb126-ffbf-4452-91de-7393b6028782, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /nmLuM34N/, ws-headers: {Host: 142.4.101.137}}
-  - {name: 未知国家-1.60MB/s(Youtube:不良林), server: ifffffffuuuuuuus.qiqicdn2.cf, port: 443, type: vmess, uuid: 5a36cce4-0527-4d36-bf4a-6c215ef9c524, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /5a36cce4-0527-4d36-bf4a-6c215ef9c524-vmess, ws-headers: {Host: ifffffffuuuuuuus.qiqicdn2.cf}}
+  - {name: 🇨🇳 中国-3.60MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.63MB/s(Youtube:不良林), server: hn.zfnode.org, port: 30217, type: trojan, password: 63ec756d-1f6a-36c8-a9fd-025f4acfc74f, sni: hn.zfnode.org, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-2.48MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
+  - {name: 🇨🇳 中国-12.16MB/s(Youtube:不良林), server: bs2-2.getnjnd.com, port: 6503, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-855.6KB/s(Youtube:不良林), server: bs1-1.getnjnd.com, port: 3502, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-7.09MB/s(Youtube:不良林), server: bs2-1.getnjnd.com, port: 3501, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-3.15MB/s(Youtube:不良林), server: bs2-2.getnjnd.com, port: 3045, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-9.90MB/s(Youtube:不良林), server: bs2-1.getnjnd.com, port: 3502, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-2.41MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.23MB/s(Youtube:不良林), server: 155.248.172.87, port: 28000, type: trojan, password: 2cee2f05-9351-4a6d-9f80-ff859a54a0b3, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-15.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-532.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-569.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-306.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-719.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
-      - 未知国家-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-855.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-15.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-532.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-569.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-306.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-719.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
-      - 未知国家-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-855.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-15.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-532.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-569.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-306.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-719.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
-      - 未知国家-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-855.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-569.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-306.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.48MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-15.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-532.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-569.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-306.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-719.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
-      - 未知国家-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-855.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-15.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-532.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-569.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-306.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-719.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
-      - 未知国家-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-855.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-15.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-532.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-569.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-306.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-719.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
-      - 未知国家-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-855.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-15.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-532.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-569.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-306.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-719.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
-      - 未知国家-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-855.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
