--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-3.60MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.63MB/s(Youtube:不良林), server: hn.zfnode.org, port: 30217, type: trojan, password: 63ec756d-1f6a-36c8-a9fd-025f4acfc74f, sni: hn.zfnode.org, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-2.48MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
-  - {name: 🇨🇳 中国-12.16MB/s(Youtube:不良林), server: bs2-2.getnjnd.com, port: 6503, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇨🇳 中国-855.6KB/s(Youtube:不良林), server: bs1-1.getnjnd.com, port: 3502, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇨🇳 中国-7.09MB/s(Youtube:不良林), server: bs2-1.getnjnd.com, port: 3501, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-2.51MB/s(Youtube:不良林), server: bs2-1.getnjnd.com, port: 3508, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-15.77MB/s(Youtube:不良林), server: bs2-2.getnjnd.com, port: 6502, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇻🇳 越南-4.34MB/s(Youtube:不良林), server: 103.173.255.234, port: 28000, type: trojan, password: 2cee2f05-9351-4a6d-9f80-ff859a54a0b3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.62MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-733.6KB/s(Youtube:不良林), server: bs2-1.getnjnd.com, port: 3509, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-2.32MB/s(Youtube:不良林), server: bs2-1.getnjnd.com, port: 3501, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
   - {name: 🇨🇳 中国-3.15MB/s(Youtube:不良林), server: bs2-2.getnjnd.com, port: 3045, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇨🇳 中国-9.90MB/s(Youtube:不良林), server: bs2-1.getnjnd.com, port: 3502, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-831.5KB/s(Youtube:不良林), server: bs2-1.getnjnd.com, port: 3502, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
   - {name: 🇨🇳 中国-2.41MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.23MB/s(Youtube:不良林), server: 155.248.172.87, port: 28000, type: trojan, password: 2cee2f05-9351-4a6d-9f80-ff859a54a0b3, skip-cert-verify: true}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-855.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.77MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-733.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-831.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-855.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.77MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-733.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-831.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,35 +52,34 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-855.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.77MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-733.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-831.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.48MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-855.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.77MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-733.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-831.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -88,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-855.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.77MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-733.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-831.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -104,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-855.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.77MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-733.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-831.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -129,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-855.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.77MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-733.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-831.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
 rules:
