--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.51MB/s(Youtube:不良林), server: bs2-1.getnjnd.com, port: 3508, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇨🇳 中国-15.77MB/s(Youtube:不良林), server: bs2-2.getnjnd.com, port: 6502, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇻🇳 越南-4.34MB/s(Youtube:不良林), server: 103.173.255.234, port: 28000, type: trojan, password: 2cee2f05-9351-4a6d-9f80-ff859a54a0b3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.62MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-733.6KB/s(Youtube:不良林), server: bs2-1.getnjnd.com, port: 3509, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇩🇪 德国-2.63MB/s(Youtube:不良林), server: 172.104.244.36, port: 28000, type: trojan, password: 2cee2f05-9351-4a6d-9f80-ff859a54a0b3, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-287.8KB/s(Youtube:不良林), server: 20.89.101.199, port: 8313, type: ss, cipher: chacha20-ietf-poly1305, password: ljqdalu13..}
+  - {name: 🇨🇳 中国-1.69MB/s(Youtube:不良林), server: bs2-1.getnjnd.com, port: 3505, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-5.42MB/s(Youtube:不良林), server: bs2-2.getnjnd.com, port: 3035, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-3.88MB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 5503, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-16.91MB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 6500, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
   - {name: 🇨🇳 中国-2.32MB/s(Youtube:不良林), server: bs2-1.getnjnd.com, port: 3501, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇨🇳 中国-3.15MB/s(Youtube:不良林), server: bs2-2.getnjnd.com, port: 3045, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
   - {name: 🇨🇳 中国-831.5KB/s(Youtube:不良林), server: bs2-1.getnjnd.com, port: 3502, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇨🇳 中国-2.41MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.36MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.23MB/s(Youtube:不良林), server: 155.248.172.87, port: 28000, type: trojan, password: 2cee2f05-9351-4a6d-9f80-ff859a54a0b3, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-15.77MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-733.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-287.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.91MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.15MB/s(Youtube:不良林)
       - 🇨🇳 中国-831.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-15.77MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-733.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-287.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.91MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.15MB/s(Youtube:不良林)
       - 🇨🇳 中国-831.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-15.77MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-733.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-287.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.91MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.15MB/s(Youtube:不良林)
       - 🇨🇳 中国-831.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-15.77MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-733.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-287.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.91MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.15MB/s(Youtube:不良林)
       - 🇨🇳 中国-831.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-15.77MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-733.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-287.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.91MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.15MB/s(Youtube:不良林)
       - 🇨🇳 中国-831.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-15.77MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-733.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-287.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.91MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.15MB/s(Youtube:不良林)
       - 🇨🇳 中国-831.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-15.77MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-733.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-287.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.91MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.15MB/s(Youtube:不良林)
       - 🇨🇳 中国-831.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
